--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "serverless-localstack": "^0.4.12"
   },
   "dependencies": {
-    "aws-sdk": "^2.437.0"
+    "aws-sdk": "^2.437.0",
+    "dotenv": "^8.0.0",
+    "ws": "^7.0.0"
   }
 }
